--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <button class="btn-add">Add Book</button>
         </div>
         <div class="main">
+            <dialog>
+                <button autofocus>Close</button>
+                <p>This is a modal dialog</p>
+            </dialog>
         </div>
         <div class="footer">
             <p>Footer</p>
