feat: finished add book functionality

--- a/index.html
+++ b/index.html
@@ -8,16 +8,68 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <dialog>
+        <form>
+            <p>
+                <label for="book_title">
+                    <span>Title:</span>
+                </label>
+                <input
+                    type="text"
+                    id="book_title"
+                    name="title"
+                    placeholder="Dune"
+                    required
+                />
+            </p>
+            <p>
+                <label for="author_name">
+                    <span>Author:</span>
+                </label>
+                <input
+                    type="text"
+                    id="author_name"
+                    name="author"
+                    placeholder="Frank Herbert"
+                    required
+                />
+            </p>
+            <p>
+                <label for="num_pages">
+                    <span>Pages:</span>
+                </label>
+                <input
+                    type="text"
+                    id="num_pages"
+                    name="pages"
+                    placeholder="412"
+                    required
+                />
+            </p>
+            <p>
+                <label for="is_read">
+                    <span>Finished reading:</span>
+                </label>
+                <input
+                    type="text"
+                    id="is_read"
+                    name="read"
+                    placeholder="Yes"
+                    required
+                />
+            </p>
+            <div class="btn-container">
+                <button class="btn-close">Close</button>
+                <button class="btn-submit">Submit</button>
+            </div>
+        </form>
+    </dialog>
     <div class="container">
         <div class="header">
             <h1 class="title">Personal Library</h1>
             <button class="btn-add">Add Book</button>
         </div>
         <div class="main">
-            <dialog>
-                <button autofocus>Close</button>
-                <p>This is a modal dialog</p>
-            </dialog>
         </div>
         <div class="footer">
             <p>Footer</p>
