feat: styled page and added fonts

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="main">
         </div>
         <div class="footer">
-            <p>Footer</p>
+            <p>The Odin Project | Josh Kim | 2024</p>
         </div>
     </div>
 </body>
