feat: changed isRead status on form

--- a/index.html
+++ b/index.html
@@ -51,13 +51,10 @@
                     <label for="is_read">
                         <span>Finished reading:</span>
                     </label>
-                    <input
-                        type="text"
-                        id="is_read"
-                        name="read"
-                        placeholder="Yes"
-                        required
-                    />
+                    <select id="is_read" name="is_read">
+                        <option value="Yes" selected>Yes</option>
+                        <option value="No">No</option>
+                    </select>
                 </p>
             </div>
             <div class="btn-container">
