feat: change read status button functionality

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                         <span>Finished reading:</span>
                     </label>
                     <select id="is_read" name="is_read">
-                        <option value="Yes" selected>Yes</option>
-                        <option value="No">No</option>
+                        <option value="true" selected>True</option>
+                        <option value="false">False</option>
                     </select>
                 </p>
             </div>
